Rename captions and alts

--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@
 		<div id="slider">
 			<figure id="slide">
 				<figure>
-					<img src="https://source.unsplash.com/zcyiFpt0E_E/1600x900" alt="Ejercicios de Alemán" data-caption="Slide 1">
+					<img src="https://source.unsplash.com/zcyiFpt0E_E/1600x900" alt="Slide 1" data-caption="Slide 1">
 					<figcaption>Slide 1</figcaption>
 				</figure>
 				<figure>
-					<img src="https://source.unsplash.com/vcTuk3CBPIs/1600x900" alt="Clases de Alemán Online" data-caption="Slide 1">
-					<figcaption>Slide 1</figcaption>
+					<img src="https://source.unsplash.com/vcTuk3CBPIs/1600x900" alt="Slide 2" data-caption="Slide 2">
+					<figcaption>Slide 2</figcaption>
 				</figure>
 				<figure>
-					<img src="https://source.unsplash.com/-l18_dgBD-U/1600x900" alt="Clases Grupales de Alemán" data-caption="Slide 1">
-					<figcaption>Slide 1</figcaption>
+					<img src="https://source.unsplash.com/-l18_dgBD-U/1600x900" alt="Slide 3" data-caption="Slide 3">
+					<figcaption>Slide 3</figcaption>
 				</figure>
 				<figure>
-					<img src="https://source.unsplash.com/wM1EMSkgu7U/1600x900" alt="Clases Particulares de Alemán" data-caption="Slide 1">
-					<figcaption>Slide 1</figcaption>
+					<img src="https://source.unsplash.com/wM1EMSkgu7U/1600x900" alt="Slide 4" data-caption="Slide 4">
+					<figcaption>Slide 4</figcaption>
 				</figure>
 				<figure>
-					<img src="https://source.unsplash.com/zqR4Fpi6Lyo/1600x900" alt="Ejercicios de Alemán" data-caption="Slide 1">
-					<figcaption>Slide 1</figcaption>
+					<img src="https://source.unsplash.com/zqR4Fpi6Lyo/1600x900" alt="Slide 5" data-caption="Slide 5">
+					<figcaption>Slide 5</figcaption>
 				</figure>
 			</figure>
 		</div>
